--- a/src/pug/inc/body.pug
+++ b/src/pug/inc/body.pug
@@ -1,11 +1,11 @@
 body
-  include preloader.html
+  include preloader.pug
 
-  include hero_nav.html
+  include hero_nav.pug
 
-  include content.html
+  include content.pug
 
-  include footer.html
-  include back_to_top_button.html
-  include sidebar.html
-  include scripts.html
+  include footer.pug
+  include back_to_top_button.pug
+  include sidebar.pug
+  include scripts.pug
