--- a/src/pug/inc/content.pug
+++ b/src/pug/inc/content.pug
@@ -2,8 +2,8 @@
 include section1.pug
 include section2.pug
 include section3.pug
-include section4.html
+include section4.pug
 include section5.pug
 
 
-include auth-modal.html
+include auth-modal.pug
