--- a/src/pug/inc/hero_nav.pug
+++ b/src/pug/inc/hero_nav.pug
@@ -3,7 +3,7 @@ section.hero.is-fullheight.is-default.is-bold
     .container
 
       //- three row button
-      include test.html
+      include nav.html
 
   nav#navbar-clone.navbar.is-fresh.is-transparent(role="navigation" aria-label="main navigation")
     .container
@@ -13,7 +13,7 @@ section.hero.is-fullheight.is-default.is-bold
   .hero-body
     .container
       .columns.is-vcentered
-        include test3.html
+        include test3.pug
 
   .hero-foot.mb-20
     .container
