--- a/src/pug/inc/section2.pug
+++ b/src/pug/inc/section2.pug
@@ -19,7 +19,7 @@ section.section.is-medium
               <div class="content">
                 <p>
                   <span class="icon-box-title">Powerful and unified interface</span>
-                  <span class="icon-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare
+                  <span class="icon-box-text">安輕樂臺，分手還一化本！界在難聯造動市けリ覧郷ユヤワサ準助7子群メソマ直林無ノ adipiscing elit. Proin ornare
                     magna eros, eu pellentesque tortor.</span>
                 </p>
               </div>
@@ -38,7 +38,7 @@ section.section.is-medium
               <div class="content">
                 <p>
                   <span class="icon-box-title">Cross device Synchronisation</span>
-                  <span class="icon-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare
+                  <span class="icon-box-text">安輕樂臺，分手還一化本！界在難聯造動市けリ覧郷ユヤワサ準助7子群メソマ直林無ノ adipiscing elit. Proin ornare
                     magna eros, eu pellentesque tortor.</span>
                 </p>
               </div>
@@ -57,7 +57,7 @@ section.section.is-medium
               <div class="content">
                 <p>
                   <span class="icon-box-title">Nomad System</span>
-                  <span class="icon-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare
+                  <span class="icon-box-text">安輕樂臺，分手還一化本！界在難聯造動市けリ覧郷ユヤワサ準助7子群メソマ直林無ノ adipiscing elit. Proin ornare
                     magna eros, eu pellentesque tortor.</span>
                 </p>
               </div>
