link to github source from demo page,

--- a/src/pug/inc/nav/nav_container.pug
+++ b/src/pug/inc/nav/nav_container.pug
@@ -15,6 +15,7 @@
         include navbar-item.html
 
     .navbar-end
+      a.navbar-item.is-secondary(href="https://github.com/louiscklaw/pug-cssninjastudio-tryout") Source here
       a.navbar-item.is-secondary(href="#") Features
       a.navbar-item.is-secondary(href="#") Pricing
       .navbar-item.has-dropdown.is-hoverable
